syntax = "proto3";

package github.com.ademaxweb.msa_messenger.chat.api.v1;

option go_package = "pkg/api/chat;chat";

message Chat {
  uint32 id = 1;
  string name = 2;
  string description = 3;
  string avatar_url = 4;
}

message Message {
  uint32 id = 1;
  uint32 chat_id = 2;
  uint32 user_id = 3;
  string text = 4;
}

message Pagination {
  uint32 limit = 1;
  optional uint32 cursor = 2;
  optional uint32 next_cursor = 3;
}



message CreateDirectChatRequest {
  uint32 participant_id = 1;
}
message CreateDirectChatResponse {
  uint32 chat_id = 1;
}



message GetChatRequest {
  uint32 chat_id = 1;
}
message GetChatResponse {
  Chat chat = 1;
}



message ListUserChatsRequest {
  uint32 user_id = 1;
  Pagination pagination = 2;
}
message ListUserChatsResponse {
  repeated Chat chats = 1;
  Pagination pagination = 2;
}



message ListChatMembersRequest {
  uint32 chat_id = 1;
  Pagination pagination = 2;
}
message ListChatMembersResponse {
  repeated uint32 user_ids = 1;
  Pagination pagination = 2;
}



message SendMessageRequest {
  uint32 chat_id = 1;
  string text = 2;
}
message SendMessageResponse {
  Message message = 1;
}



message ListMessagesRequest {
  uint32 chat_id = 1;
  Pagination pagination = 2;

}
message ListMessagesResponse {
  repeated Message messages = 1;
  Pagination pagination = 2;
}



message StreamMessagesRequest {
  uint32 chat_id = 1;
  optional uint64 since_unix_ms = 2;
}
message StreamMessagesResponse {
  Message message = 1;
}